Fix spacing on standard selection page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,7 +67,7 @@ form ul ul li {
 
 fieldset {
 	margin-bottom: 30px;
-	border: 2px solid #2b4d6f;
+	border: 1px solid #2b4d6f;
 	padding-left: 20px;
 	padding-right: 20px;
 }
